push for new features

--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "chart.js": "^4.1.1",
     "d3": "^7.8.0",
     "highland-process": "^1.0.5",
     "jquery": "^3.6.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "regex": "^0.1.1",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
