--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "node-sass": "^7.0.3",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
