--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
